--- a/another.html
+++ b/another.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>My Web Page!</title>
+        <title>Korean Fish</title>
         <style>
             h1 {
                 color: red;
@@ -54,6 +54,7 @@
         <div id=tourl>
             <img src=https://img.ltn.com.tw/Upload/news/600/2019/06/22/281.jpg width="540px">
             <p>圖二、國中模範生諷韓市長任期沒有做好做滿</p>
+            <p><span class=bold>溜之大吉～酸</span></p>
         </div>
         <div id=announce>
         <p><span class="bold">大家都要去投票啊QQ</span></p>
