--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Vegatable HAN</title>
+        <title>Vegetable HAN</title>
         <style>
             h1 {
                 color: #6d63f7;
