--- a/another.html
+++ b/another.html
@@ -34,7 +34,7 @@
             #announce{
                 text-align: center;
                 font-family: "Microsoft JhengHei";
-                font-size: 48px;
+                font-size: 36px;
                 color:tomato;
             }
         </style>
@@ -47,20 +47,20 @@
             <p><span class=bbigggggg>他</span>們是那些為了建立民國而慷慨赴義的革命烈士，是為了民主自治而奮勇抵禦外辱的台灣前輩，是為了內戰憂患而死傷無數的仁人志士，我們不能忘記，今天的和平與繁榮，民主與自由，都是建立在無數先賢先烈以及他們家屬的鮮血與眼淚之上。因為他們的鮮血與眼淚，我們才能在偏安一隅的寶島台灣，創造出我們對於這個國家、這片土地的共同記憶。</p>
             <p><span class=bbigggggg>我</span>們曾經一起走過五十年代土地改革後的農村變化，成千上萬的青年男女，在大清早的紅綠燈前排隊走進加工出口區，用他們的青春與汗水，打造出一個台灣製造的經濟奇蹟。我們也曾在退出聯合國、中美斷交的時候徬徨無依，有如被遺棄的國際孤兒。可是我們不怕挑戰，繼續打拼，如今，我們享有一百多個國家和地區的免簽證或落地簽。我們還曾經一起走過一九八零年代的巨變。通過民間的社會運動，召喚一個與時並進的開放社會，每一場街頭運動的呼喊，都是庶民最真實的心聲，當年蔣經國先生呼應時代的要求，「解除戒嚴，開放黨禁報禁，開放兩岸探親」，為台灣打開全新格局，也為民主改革寫下新的篇章。無論是誰執政或誰在野，都不能否認，民間的力量，從農村到城市，從工廠到街頭，從流動夜市到科技大廠，每一個人的努力與付出，才是匯集成改變歷史、創造歷史的大江大海。正是幾代人的奮鬥，幾代人的打拼，我們才建立起這麼一段超越黨派，超越族群，超越世代，超越階級的共同記憶，這就是中華民國的歷史，也是中華民國最真實的存在。</p>
             <p><span class=bbigggggg>然</span>而這些年來，民進黨改寫台灣歷史，把過去所有民眾的共同奮鬥，變成民進黨的功勞；把所有人民的辛苦血汗，當成自己的功德戰績。永遠一付台灣人民欠了民進黨一樣的高傲姿態，而在社會大眾的沉默忍讓之下，他們肆無忌憚的貪污、腐敗、濫權，所以一個「東廠仍舊在、肥貓處處生」的高傲政府，沒有將台灣帶到一個更美好的所在，而是將台灣推向一個比中美斷交時還要可怕的絕境邊緣。 更讓我痛惜的是，他們一上任即開始整肅所有的老師、軍人、警消和公務人員，把一生為教育奉獻的老師，為民眾服務的公務員，捍衛國家安全的軍人，和為社會安定付出的警消，統統抹黑成「米蟲」，讓原本清白敬業的社會中堅蒙受不白之冤，從此再也無法心平氣和地過日子。</p>
-            <p><span class=bbigggggg>甚</span>至面對平凡樸素的工人、農漁民也毫不手軟，一個幾乎成為國際笑話的一例一休，把勤奮的勞工與努力的企業主們同時逼上絕路。現在的台灣，一名大學生畢業生年薪不到三十萬的比比皆是，但是一個民進黨立委的兒子，卻可以把一個年輕人十年的薪水掉在高鐵上還不當一回事。我們再看看有一群和民進黨關係匪淺的人士，在各種國營企業坐領百萬高薪，而我們辛勤勞苦的軍公教同胞勤勤懇懇一輩子的退休金，養老活命的錢，民進黨竟然可以砍得心安理得，這叫基層人民怎麼活下去？這是一個政府應該有的態度和作為嗎？最近很多人在談「亡國感」，我想請問，是誰把中華民國變成「這個國家」的？是誰在抹殺中華民國的歷史？是誰將擁有主權與軍隊的中華民國矮化，一天到晚拿台灣和香港特區政府相提並論？是誰讓我們的邦交國一直掉、是誰在總統就職演說上對我們的國號「中華民國」這四個字避而不提、又是誰，讓我們在國家的重要節日裡，越來越少看到我們的國旗飄揚？<span class="bold">我也有很深的亡國感，因為我愛我的國家，愛我的國旗、我的國家是中華民國。</span></p>
-            <p><span class=bbigggggg>新</span>一代的年青人他們比我們好看、比我們聰明、生活在比我們富裕的環境，可惜他們沒有我們這一代幸運。他們沒有趕上台灣最輝煌的歲月，伴隨他們成長的只有藍綠惡鬥、社會對立與國家虛耗，還有一年不如一年的蕭條景氣他們沒有經歷過雙十國慶到處一片旗海飄揚的國恩家慶，不曾感受過我們曾經是亞洲四小龍的得意風光，那時的中華民國是令全球讚嘆的奇蹟之島，是華人歸仰的民主之光，可是這些年來我們的國旗從飄揚到沉寂，我們的國家也從繁盛到衰弱，因為我們失去的不只是街頭的飄揚旗海，更是許多人心中的那份國家認同，本來政黨輪替與派系競爭都是民主社會的基本常態，<span class="bold">可是任何政黨輪替與競爭都不應該跨越國家認同的底線，當國家認同的底線一旦衝垮，就是踐踏了關係著2300萬人前程福祉的國本與國運</span>，如果深愛這片土地，深愛台澎金馬上的山川河流、蜿蜒海岸與美好人情。請記住，台灣的顏色從來不是藍綠橘白，而是這片青天白日滿地紅，這面國旗乘載著不只是中華民國的苦難與榮耀，更是2300萬人民的現在與未來。<span class="bold">如果未來我有機會擔任中華民國總統，除了為我們的軍公教、農漁工與年輕人找回他們應有的社會正義與公平機會，我也會堅守中華民國憲法，以台灣優先、堅持自由、守護民主、發揚中華文化為前提，創造兩岸和平穩定的發展，並在強化國防之餘，絕不為了塑造個人形象而置台灣人民於戰爭危機</span>；因為台灣人民需要的不是亡國感、而是安全感；台灣年輕人需要的是進入職場、而不是走上戰場。雖然中華民國的現在與過去是用先賢先烈的生命與血汗換來的，但我希望中華民國的未來再也不需要我們年輕世代的生命或血汗，而是運用我們年輕世代的熱情、創意、知識與智慧，和我們這個世代一起，大家作伙讓「台灣安全、人民有錢」。</p>
-            <p><span class=bbigggggg>今</span>天10/10，請大家舉起手中的國旗，這是我們熱愛國家的真實呈現。<span class="bold">明年1/11，請大家升起心中的國旗，那是台灣再創輝煌的最後機會</span>，但願明年以後，伴隨所有台灣囡仔成長的將不再是藍綠惡鬥、社會對立、國家虛耗，與經濟蕭條，而是青天白日滿地紅的旗正飄飄，是撥雲見青天的新台灣奇蹟。祝中華民國國運昌隆；祝台灣人民幸福安康！</p>        
+            <p><span class=bbigggggg>甚</span>至面對平凡樸素的工人、農漁民也毫不手軟，一個幾乎成為國際笑話的一例一休，把勤奮的勞工與努力的企業主們同時逼上絕路。現在的台灣，一名大學生畢業生年薪不到三十萬的比比皆是，但是一個民進黨立委的兒子，卻可以把一個年輕人十年的薪水掉在高鐵上還不當一回事。我們再看看有一群和民進黨關係匪淺的人士，在各種國營企業坐領百萬高薪，而我們辛勤勞苦的軍公教同胞勤勤懇懇一輩子的退休金，養老活命的錢，民進黨竟然可以砍得心安理得，這叫基層人民怎麼活下去？這是一個政府應該有的態度和作為嗎？最近很多人在談「亡國感」，我想請問，是誰把中華民國變成「這個國家」的？是誰在抹殺中華民國的歷史？是誰將擁有主權與軍隊的中華民國矮化，一天到晚拿台灣和香港特區政府相提並論？是誰讓我們的邦交國一直掉、是誰在總統就職演說上對我們的國號「中華民國」這四個字避而不提、又是誰，讓我們在國家的重要節日裡，越來越少看到我們的國旗飄揚？我也有很深的亡國感，因為我愛我的國家，愛我的國旗、我的國家是中華民國。</p>
+            <p><span class=bbigggggg>新</span>一代的年青人他們比我們好看、比我們聰明、生活在比我們富裕的環境，可惜他們沒有我們這一代幸運。他們沒有趕上台灣最輝煌的歲月，伴隨他們成長的只有藍綠惡鬥、社會對立與國家虛耗，還有一年不如一年的蕭條景氣他們沒有經歷過雙十國慶到處一片旗海飄揚的國恩家慶，不曾感受過我們曾經是亞洲四小龍的得意風光，那時的中華民國是令全球讚嘆的奇蹟之島，是華人歸仰的民主之光，可是這些年來我們的國旗從飄揚到沉寂，我們的國家也從繁盛到衰弱，因為我們失去的不只是街頭的飄揚旗海，更是許多人心中的那份國家認同，本來政黨輪替與派系競爭都是民主社會的基本常態，<span class="bold">可是任何政黨輪替與競爭都不應該跨越國家認同的底線，當國家認同的底線一旦衝垮，就是踐踏了關係著2300萬人前程福祉的國本與國運</span>，如果深愛這片土地，深愛台澎金馬上的山川河流、蜿蜒海岸與美好人情。請記住，台灣的顏色從來不是藍綠橘白，而是這片青天白日滿地紅，這面國旗乘載著不只是中華民國的苦難與榮耀，更是2300萬人民的現在與未來。如果未來我有機會擔任中華民國總統，除了為我們的軍公教、農漁工與年輕人找回他們應有的社會正義與公平機會，我也會堅守中華民國憲法，以台灣優先、堅持自由、守護民主、發揚中華文化為前提，創造兩岸和平穩定的發展，並在強化國防之餘，絕不為了塑造個人形象而置台灣人民於戰爭危機；因為台灣人民需要的不是亡國感、而是安全感；台灣年輕人需要的是進入職場、而不是走上戰場。雖然中華民國的現在與過去是用先賢先烈的生命與血汗換來的，但我希望中華民國的未來再也不需要我們年輕世代的生命或血汗，而是運用我們年輕世代的熱情、創意、知識與智慧，和我們這個世代一起，大家作伙讓「台灣安全、人民有錢」。</p>
+            <p><span class=bbigggggg>今</span>天10/10，請大家舉起手中的國旗，這是我們熱愛國家的真實呈現。<span class="bold">明年1/11</span>，請大家升起心中的國旗，那是台灣再創輝煌的最後機會，但願明年以後，伴隨所有台灣囡仔成長的將不再是藍綠惡鬥、社會對立、國家虛耗，與經濟蕭條，而是青天白日滿地紅的旗正飄飄，是撥雲見青天的新台灣奇蹟。祝中華民國國運昌隆；祝台灣人民幸福安康！</p>        
         </div>
         <div id=tourl>
             <img src=https://img.ltn.com.tw/Upload/news/600/2019/06/22/281.jpg width="540px">
-            <p>圖二、國中模範生諷韓市長任期沒有做好做滿</p>
-            <p><span class=bold>溜之大吉～酸</span></p>
+            <p>圖二、國中模範生與高雄市長合影</p>
+            <p><a href="https://news.ltn.com.tw/news/focus/paper/1297812">圖源：自由時報電子報</a></p>
+            <p>他講得有些地方不錯好不過</p>
         </div>
         <div id=announce>
-        <p><span class="bold">大家都要去投票啊QQ</span></p>
+        <p><span class="bold">大家還是都要去投票啊QQ</span></p>
         </div>
         <div id=tourl>
-        <a href="https://youtu.be/YEQJwDfLhLU">這首真的很好聽。</a>
         <p><a href="index.html">LINK BACK!</a></p>
         </div>
     </body>
